--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -87,6 +86,8 @@
 
     <script>
         let autocomplete;
+        let typingTimer;
+        const typingInterval = 500; // Delay in milliseconds
 
         // Initialize Google Places Autocomplete
         function initAutocomplete() {
@@ -94,17 +95,22 @@
             autocomplete = new google.maps.places.Autocomplete(input);
         }
 
-        // Validate Address in Real-Time
+        // Validate Address with Debounce Logic
         function validateAddress() {
-            const address = document.getElementById("propertyAddress").value.trim();
+            clearTimeout(typingTimer); // Clear previous timer
             const feedback = document.getElementById("addressFeedback");
-            if (address.length < 5) {
-                feedback.textContent = "Address is too short.";
-                feedback.className = "error";
-            } else {
-                feedback.textContent = "Address looks valid.";
-                feedback.className = "success";
-            }
+            feedback.textContent = ""; // Clear feedback while typing
+
+            typingTimer = setTimeout(() => {
+                const address = document.getElementById("propertyAddress").value.trim();
+                if (address.length < 5) {
+                    feedback.textContent = "Address is too short.";
+                    feedback.className = "error";
+                } else {
+                    feedback.textContent = "Address looks valid.";
+                    feedback.className = "success";
+                }
+            }, typingInterval);
         }
 
         // Fetch Property Information
